Thu Apr  1 06:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Make bezeled and bordered mutually exclusive
	- bug report by Jonathan Gapen
	* Headers/AppKit/NSStringDrawing.h: Add all the string drawing stuff
	* Source/NSStringDrawing.m: Rewrite from scratch - preliminary work.
	* Source/NSButton.m: Removed redundant lock/unlock in drawing ops.
	* Source/NSControl.m: tidy.
	* Source/NSSplitView.m: avoid compiler warning.
	* Source/NSTextFieldCell.m: tidy up, set draws background color in
	initialisation, fix border/bezel drawing.

Wed Mar 31 17:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView: ([-viewWithTag:]) complete rewrite to find nearest
	matching view at any depth as it should.
	([-replaceSubview:with:]) minor rewrite and tidy up.

Tue Mar 30 14:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Position image correctly in flipped views.
	* Source/NSSplitView.m: Position dimple image correctly when flipped.
	* Source/NSImage.m: Tidied a little
	* Source/NSScrollView.m: Work when flipped - and make NSScrollView
	flipped unless a subclass dictates otherwise.

Tue Mar 30 05:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSScroller.h: Modified ([-setContentView:]) and
	([-contentView]) to use NSClipView rather than NSView.
	* NSScroller.m: Modified ([-setContentView:]) and ([-contentView]) to
	use NSClipView rather than NSView.

Sat Mar 27 05:58:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowser.m: Override target, setTarget, action, setAction
	* Headers/AppKit/NSBrowser.h: Add _action and _target ivars.

FRi Mar 26 20:34:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSImage.m: Incorporated fixes suggested by dave@turbocat.de

Thu Mar 25 20:34:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Mostly fixes to cope with case where tracking rectangles are